--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <title>Movies</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" type="image/x-icon" href="/images/Movie_logo2-removebg-preview.png">
 
 <link rel="stylesheet" href="style3.css">
 <link rel="stylesheet" href="/style4.css">
