--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Rotating Navigation</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" type="image/x-icon" href="/images/Movie_logo2-removebg-preview.png">
   </head>
   <body>
     <div class="hamburger">
