--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     
 
 <section class="front-page">
-    <video src="videos/jurasic world.webm" autoplay muted></video>
+    <video src="videos/jurasic world.webm" autoplay></video>
     <div class="content">
         <h1 id="title">Jurassic World Dominion</h1>
         <p>Four years after the destruction 
